--- a/src/Skahal.GlobalServer.Infrastructure/Skahal.GlobalServer.Infrastructure.csproj
+++ b/src/Skahal.GlobalServer.Infrastructure/Skahal.GlobalServer.Infrastructure.csproj
@@ -37,6 +37,7 @@
       <HintPath>..\References\mysql.data.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
