Added the below settings to web.config: * MinDequeueMessagesWaitingSeconds * MaxDequeueMessagesWaitingSeconds * DecreaseDequeueMessagesWaitingSeconds

--- a/src/Skahal.GlobalServer.Web/web.config
+++ b/src/Skahal.GlobalServer.Web/web.config
@@ -10,6 +10,9 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
   <appSettings>
     <add key="GameName" value="HATCG" />
     <add key="PlayerInactivityTimeoutSeconds" value="60" />
+    <add key="MinDequeueMessagesWaitingSeconds" value="1" />
+    <add key="MaxDequeueMessagesWaitingSeconds" value="1" />
+    <add key="DecreaseDequeueMessagesWaitingSeconds" value="0" />
     <add key="MYSQL_CONNECTION_STRING" value="" />
   </appSettings>
   <system.web>
